--- a/.editorconfig
+++ b/.editorconfig
@@ -727,3 +727,6 @@ ij_yaml_sequence_on_new_line = false
 ij_yaml_space_before_colon = false
 ij_yaml_spaces_within_braces = true
 ij_yaml_spaces_within_brackets = true
+
+[.gitattributes]
+indent_style = space
